# checking-IELTS-results-bot

./: main.py  pyproject.toml  requirements.txt
bot/: logger_config.py  main.py
bot/handlers/: start.py  task_handler.py  welcome_handler.py  writing_task_1_report.py
bot/keyboards/: tasks_keyboard.py
bot/services/: deepseek_chat.py  parser.py
bot/src/handlers/: start.py  tools.py  writing_task_1_report.py
bot/src/keyboards/: answer_keyboard.py  tasks_keyboard.py
bot/src/services/: deepseek_chat.py
bot/src/utils/: config.py  util_texts.py
bot/utils/: build_prompt.py  deepseek_chat.py  states.py
handlers/: welcome_commands.py
