[project]
name = "ielts-test-simulation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.20.0.post0",
    "fake-useragent>=2.2.0",
    "openai>=1.88.0",
    "playwright>=1.52.0",
    "playwright-stealth>=1.0.6",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
    "setuptools>=80.9.0",
    "undetected-chromedriver>=3.5.5",
]
