[project]
name = "ielts-test-simulation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.20.0.post0",
    "cachetools~=5.3.0",
    "fake-useragent>=2.2.0",
    "fluentogram~=1.1.6",
    "motor~=3.6.0",
    "openai>=1.88.0",
    "playwright>=1.52.0",
    "playwright-stealth>=1.0.6",
    "pydantic-settings~=2.7.0",
    "pymongo==4.9.2",
    "python-dotenv>=1.1.0",
    "requests>=2.32.4",
    "setuptools>=80.9.0",
    "undetected-chromedriver>=3.5.5",
]
